# rust-weechat

sample/: Cargo.toml
sample/src/: lib.rs
weechat-macro/: Cargo.toml
weechat-macro/src/: lib.rs
weechat-rs/: Cargo.toml
weechat-rs/src/: buffer.rs  config.rs  config_options.rs  hashtable.rs  hdata.rs  lib.rs  weechat.rs
weechat-sys/: Cargo.toml  build.rs
weechat/src/: lib.rs
weechat/src/buffer/: hotlist.rs  mod.rs  nick.rs  nickgroup.rs  notify.rs
